<project>
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>eu.tneitzel</groupId>
        <artifactId>reactor</artifactId>
        <version>5.0.0</version>
    </parent>

    <artifactId>beanshooter</artifactId>
    <packaging>jar</packaging>

    <name>${project.artifactId}</name>
    <description>JMX enumeration and attacking tool</description>
    <url>https://github.com/qtc-de/beanshooter</url>

    <licenses>
      <license>
        <name>GPL-v3.0</name>
        <url>http://www.gnu.org/licenses/gpl-3.0.txt</url>
      </license>
    </licenses>

    <developers>
       <developer>
         <id>qtc-de</id>
         <name>Tobias Neitzel</name>
         <email>secure@tneitzel.eu</email>
         <url>https://tneitzel.eu/</url>
       </developer>
    </developers>

    <scm>
      <connection>scm:git:git://github.com/qtc-de/beanshooter.git</connection>
      <developerConnection>scm:git:ssh://github.com:qtc-de/beanshooter.git</developerConnection>
      <url>https://github.com/qtc-de/beanshooter/tree/master</url>
    </scm>

    <distributionManagement>
      <snapshotRepository>
        <id>ossrh</id>
        <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
      </snapshotRepository>
    </distributionManagement>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>

    <dependencies>

        <dependency>
          <groupId>eu.tneitzel</groupId>
          <artifactId>argparse4j</artifactId>
          <version>1.3.0</version>
        </dependency>

        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.14.0</version>
        </dependency>

        <dependency>
            <groupId>org.javassist</groupId>
            <artifactId>javassist</artifactId>
            <version>3.29.2-GA</version>
        </dependency>

        <dependency>
            <groupId>org.glassfish.external</groupId>
            <artifactId>opendmk_jmxremote_optional_jar</artifactId>
            <version>1.0-b01-ea</version>
        </dependency>

        <dependency>
            <groupId>org.jolokia</groupId>
            <artifactId>jolokia-jmx-adapter</artifactId>
            <version>1.7.2</version>
        </dependency>

        <dependency>
            <groupId>org.apache.maven</groupId>
            <artifactId>maven-artifact</artifactId>
            <version>3.8.7</version>
        </dependency>

    </dependencies>

    <build>
        <sourceDirectory>src</sourceDirectory>
        <resources>

          <resource>
             <directory>.</directory>
             <includes>
                 <include>config.properties</include>
                 <include>default-credentials.txt</include>
             </includes>
          </resource>

          <resource>
              <directory>../tonka-bean/target</directory>
             <includes>
                 <include>tonka-bean*</include>
             </includes>
          </resource>

        </resources>

        <plugins>
          <plugin>
              <artifactId>maven-assembly-plugin</artifactId>
              <executions>
                <execution>
                  <phase>package</phase>
                  <goals>
                    <goal>single</goal>
                  </goals>
                </execution>
              </executions>
              <configuration>
                <finalName>beanshooter-${project.version}</finalName>
                <archive>
                    <manifest>
                        <mainClass>eu.tneitzel.beanshooter.Starter</mainClass>
                        <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                    </manifest>
                    <manifestEntries>
                        <Built-By>
                            Tobias Neitzel (@qtc_de)
                        </Built-By>
                        <Class-Path>
                            jboss-remoting.jar
                            wlthint3client.jar
                        </Class-Path>
                        <Add-Opens>
                            java.base/java.lang
                            java.base/java.util
                            java.base/java.lang.reflect
                            java.base/jdk.internal.misc
                            java.rmi/java.rmi.server
                            java.rmi/sun.rmi.server
                            java.rmi/sun.rmi.transport
                            java.rmi/sun.rmi.transport.tcp
                            java.xml/com.sun.org.apache.xalan.internal.xsltc.runtime
                            java.xml/com.sun.org.apache.xalan.internal.xsltc.trax
                        </Add-Opens>
                    </manifestEntries>
                </archive>
                <descriptorRefs>
                  <descriptorRef>jar-with-dependencies</descriptorRef>
                </descriptorRefs>
                <outputDirectory>../target</outputDirectory>
              </configuration>
          </plugin>

          <plugin>
              <artifactId>maven-jar-plugin</artifactId>
              <version>3.2.0</version>
              <executions>
                <execution>
                   <id>default-jar</id>
                   <phase>none</phase>
                </execution>
              </executions>
          </plugin>
        </plugins>

    </build>

    <profiles>
      <profile>
        <id>publish</id>

        <build>
           <plugins>
             <plugin>
               <groupId>org.sonatype.plugins</groupId>
               <artifactId>nexus-staging-maven-plugin</artifactId>
               <version>1.6.13</version>
               <extensions>true</extensions>
               <configuration>
                 <serverId>ossrh</serverId>
                 <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
                 <autoReleaseAfterClose>true</autoReleaseAfterClose>
               </configuration>
             </plugin>

             <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-source-plugin</artifactId>
               <version>3.3.0</version>
               <executions>
                  <execution>
                  <id>attach-sources</id>
                   <goals>
                     <goal>jar-no-fork</goal>
                   </goals>
                 </execution>
               </executions>
             </plugin>

             <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-javadoc-plugin</artifactId>
               <version>3.6.3</version>
               <executions>
                 <execution>
                   <id>attach-javadocs</id>
                   <goals>
                     <goal>jar</goal>
                   </goals>
                 </execution>
               </executions>
             </plugin>

             <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-gpg-plugin</artifactId>
               <version>3.1.0</version>
               <executions>
                 <execution>
                   <id>sign-artifacts</id>
                   <phase>verify</phase>
                   <goals>
                     <goal>sign</goal>
                   </goals>
                   <configuration>
                     <gpgArguments>
                       <arg>--pinentry-mode</arg>
                       <arg>loopback</arg>
                     </gpgArguments>
                   </configuration>
                 </execution>
               </executions>
             </plugin>

             <plugin>
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>3.3.0</version>
                 <executions>
                   <execution>
                      <id>default-jar</id>
                      <phase>package</phase>
                   </execution>
                 </executions>
             </plugin>

           </plugins>
         </build>
       </profile>
     </profiles>
</project>
